Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,20 +6,19 @@
         <div>
             <h1><a href="/">Django Girrls Blog</a></h1>
         </div>
+        {% for i in postsx %}
         <div>
-            <p>published: 2019/11/28 23:21</p>
-            <h2><a href="">今日の晩御飯</a></h2>
-            <p>今日の晩御飯は鍋であった。<br>
-                野菜をメインにたくさん食べた。<br>
-                肉も投入したが魚と餃子のほうがおいしかった。</p>
+            <h2><a href="">{{i.title}}</a></h2>
+            <p>
+                {{i.text|linebreaksbr}}<!---|linebreaksbrはtextの中の改行を段落にしている-->
+            </p>
+            <p>
+                published:{{i.published_date}}
+            </p>
+            <p>
+                author:{{i.author}}
+            </p>
         </div>
-        <div>
-                <p>published: 2019/11/28 23:24</p>
-                <h2><a href="">タブレットスタンド</a></h2>
-                <p>Django girlsのチュートリアルを行うために<br>
-                        ノートPCタブレットを使うことにした。<br>
-                        しかし、置いて作業をするのが大変だったから<br>
-                        自分でタブレットスタンドを作ったよ</p>
-            </div>
+        {% endfor %}
     </body>
 </html>
