--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,12 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1>
+                <a href="/">Django Girls Blog</a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_new' %}" class ="top-menu"><span class="glyphicon glyphicon-plus"></span></a><!--glyphicon-plusはBoot Strapのテーマであり、プラス記号を表示する-->
+                {% endif %}
+            </h1>
         </div>
         <div class="content container">
             <div class="row">
